<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="cz.zcu.pkozler.mkz.MainActivity">

    <item
        android:id="@+id/action_calc"
        android:title="@string/title_activity_calc"
        android:orderInCategory="100"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_plot"
        android:title="@string/title_activity_plot"
        android:orderInCategory="100"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_solve"
        android:title="@string/title_activity_solve"
        android:orderInCategory="100"
        app:showAsAction="never"/>
    <!--item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" /-->
</menu>
