<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="cz.zcu.pkozler.mkz.SolveActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/solveLinearLayout"
            android:layout_width="0dp"
            android:layout_height="300dp"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="64dp"
            android:orientation="vertical"
            android:weightSum="1"
            app:layout_constraintBottom_toTopOf="@+id/solveGridLayout"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                tools:layout_editor_absoluteX="8dp"
                tools:layout_editor_absoluteY="8dp">

                <EditText
                    android:id="@+id/solveLeftInputText"
                    android:layout_width="150dp"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="@string/solve_left_input_text"
                    android:inputType="text"
                    android:textAlignment="textEnd"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="23dp"
                    android:layout_height="match_parent"
                    android:layout_marginTop="16dp"
                    android:layout_weight="1"
                    android:gravity="center_vertical|center"
                    android:text="@string/solve_text_view"
                    android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:layout_editor_absoluteX="360dp"
                    tools:textAlignment="center" />

                <EditText
                    android:id="@+id/solveRightInputText"
                    android:layout_width="150dp"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="@string/solve_right_input_text"
                    android:inputType="text"
                    android:textAlignment="textStart"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/solve_lower_boundary_text_view"
                    android:textAppearance="@android:style/TextAppearance.DeviceDefault"
                    android:gravity="center_vertical|center"
                    tools:layout_editor_absoluteX="1dp"
                    tools:layout_editor_absoluteY="15dp" />

                <EditText
                    android:id="@+id/solveLowerBoundaryText"
                    android:layout_width="50dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="@string/solve_lower_boundary_text"
                    android:inputType="numberSigned|numberDecimal"
                    android:text="-10"
                    android:textAlignment="textEnd"
                    android:textAppearance="@android:style/TextAppearance.DeviceDefault"
                    tools:layout_editor_absoluteX="78dp"
                    tools:layout_editor_absoluteY="8dp" />

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="23dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center_vertical|center"
                    android:text="@string/solve_upper_boundary_text_view"
                    android:textAppearance="@android:style/TextAppearance.DeviceDefault"
                    tools:layout_editor_absoluteX="128dp"
                    tools:layout_editor_absoluteY="16dp" />

                <EditText
                    android:id="@+id/solveUpperBoundaryTextField"
                    android:layout_width="50dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="@string/solve_upper_boundary_text"
                    android:inputType="numberSigned|numberDecimal"
                    android:text="10"
                    android:textAlignment="textStart"
                    android:textAllCaps="false"
                    android:textAppearance="@android:style/TextAppearance.DeviceDefault"
                    tools:layout_editor_absoluteX="150dp"
                    tools:layout_editor_absoluteY="8dp" />

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center_vertical|center"
                    android:text="@string/solve_step_count_text_view"
                    android:textAppearance="@android:style/TextAppearance.DeviceDefault"
                    tools:layout_editor_absoluteX="189dp"
                    tools:layout_editor_absoluteY="16dp" />

                <EditText
                    android:id="@+id/solveStepCountText"
                    android:layout_width="50dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="@string/solve_step_count_text"
                    android:inputType="number"
                    android:text="1"
                    android:textAlignment="center"
                    android:textAppearance="@android:style/TextAppearance.DeviceDefault"
                    tools:layout_editor_absoluteX="268dp"
                    tools:layout_editor_absoluteY="8dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_weight="0.60"
                android:orientation="horizontal"
                tools:layout_editor_absoluteX="8dp"
                tools:layout_editor_absoluteY="8dp">

                <Button
                    android:id="@+id/solveButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="startSolving"
                    android:text="@string/solve_button" />

                <TextView
                    android:id="@+id/solveOutputTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.85"
                    android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium" />

            </LinearLayout>

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ListView
                    android:id="@+id/solveListView"
                    android:layout_width="300dp"
                    android:layout_height="100dp"
                    android:layout_marginBottom="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </android.support.constraint.ConstraintLayout>

        </LinearLayout>

        <GridLayout
            android:layout_width="0dp"
            android:layout_height="240dp"
            android:layout_marginBottom="0dp"
            android:layout_marginLeft="4dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:id="@+id/solveGridLayout"
            app:layout_constraintHorizontal_bias="0.0"
            android:layout_marginStart="4dp">

        </GridLayout>

    </android.support.constraint.ConstraintLayout>

</android.support.design.widget.CoordinatorLayout>
